# Graphics

./: CMakeLists.txt
include/: Camera.h  Frustum.h  Geometry.h  Lab1AutoScreenshots.h  MouseController.h  NormalShader.h  Obj.h  Utils.h
shaders/: normal.frag  projective.vert
src/: Camera.cpp  MouseController.cpp  Obj.cpp  Shader.cpp  main.cpp
